test/programs/good/check-terms-precedence/lambda_with_basis_state_argument.lq
fun :: Bit
fun = \var Bit . @0
