test/programs/bad/typechecker/new_1.lq
main :: Bit
main = new @1

